[AntDesign][Cedric] feature: added gradient body background

--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,20 @@
   text-align: center;
 }
 body{
-  background-color: #282c34;
+  background: rgba(133,228,255,1);
+  background: -moz-linear-gradient(left, rgba(133,228,255,1) 0%, rgba(0,145,255,1) 100%);
+  background: -webkit-gradient(left top, right top, color-stop(0%, rgba(133,228,255,1)), color-stop(100%, rgba(0,145,255,1)));
+  background: -webkit-linear-gradient(left, rgba(133,228,255,1) 0%, rgba(0,145,255,1) 100%);
+  background: -o-linear-gradient(left, rgba(133,228,255,1) 0%, rgba(0,145,255,1) 100%);
+  background: -ms-linear-gradient(left, rgba(133,228,255,1) 0%, rgba(0,145,255,1) 100%);
+  background: linear-gradient(to right, rgba(133,228,255,1) 0%, rgba(0,145,255,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#85e4ff', endColorstr='#0091ff', GradientType=1 );  
 }
 .col-92::selection,.col-8::selection,#deleteIcon::selection {
   color: none;
   background: none;
 }
+
 #appName{
   color:white;
   font-family: 'Kaushan Script', cursive;
