--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  margin-top: 50px;
 }
 body{
   background: rgba(133,228,255,1);
@@ -66,13 +67,15 @@ input#todoInput:focus, #todoItem:focus{
 #todoItem{
   color:white;
   border:white;
-  width : 500px;
   margin: auto;
   border: 2px solid white;
-  height : 35px;
+  height : 50px;
   margin-bottom: 5px;
   text-align:left;
   padding-left: 10px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 20px;
+  font-weight: 600;
 }
 
 .col-8 {
@@ -92,13 +95,6 @@ input#todoInput:focus, #todoItem:focus{
 }
 
 #deleteIcon{
-  /* display: inline-block;
-  padding-top:-10px;
-  width: 100%;
-  height : 100%;
-  line-height: 100%; */
-  /* align-content: center; */
   position:relative;
   top: 4.5px;
-  /* display:flex; */
 }
