--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,7 @@
   text-align: center;
   margin-top: 50px;
 }
-body{
-  background: rgba(133,228,255,1);
-  background: -moz-linear-gradient(left, rgba(133,228,255,1) 0%, rgba(0,145,255,1) 100%);
-  background: -webkit-gradient(left top, right top, color-stop(0%, rgba(133,228,255,1)), color-stop(100%, rgba(0,145,255,1)));
-  background: -webkit-linear-gradient(left, rgba(133,228,255,1) 0%, rgba(0,145,255,1) 100%);
-  background: -o-linear-gradient(left, rgba(133,228,255,1) 0%, rgba(0,145,255,1) 100%);
-  background: -ms-linear-gradient(left, rgba(133,228,255,1) 0%, rgba(0,145,255,1) 100%);
-  background: linear-gradient(to right, rgba(133,228,255,1) 0%, rgba(0,145,255,1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#85e4ff', endColorstr='#0091ff', GradientType=1 );  
-}
+
 .col-92::selection,.col-8::selection,#deleteIcon::selection {
   color: none;
   background: none;
@@ -98,3 +89,141 @@ input#todoInput:focus, #todoItem:focus{
   position:relative;
   top: 4.5px;
 }
+
+
+ body
+ {
+   margin: 0;
+   padding: 0;
+   background: rgba(71,71,71,1);
+   background: -moz-linear-gradient(left, rgba(71,71,71,1) 0%, rgba(50,52,54,1) 23%, rgba(4,11,17,1) 73%, rgba(4,11,17,1) 100%);
+   background: -webkit-gradient(left top, right top, color-stop(0%, rgba(71,71,71,1)), color-stop(23%, rgba(50,52,54,1)), color-stop(73%, rgba(4,11,17,1)), color-stop(100%, rgba(4,11,17,1)));
+   background: -webkit-linear-gradient(left, rgba(71,71,71,1) 0%, rgba(50,52,54,1) 23%, rgba(4,11,17,1) 73%, rgba(4,11,17,1) 100%);
+   background: -o-linear-gradient(left, rgba(71,71,71,1) 0%, rgba(50,52,54,1) 23%, rgba(4,11,17,1) 73%, rgba(4,11,17,1) 100%);
+   background: -ms-linear-gradient(left, rgba(71,71,71,1) 0%, rgba(50,52,54,1) 23%, rgba(4,11,17,1) 73%, rgba(4,11,17,1) 100%);
+   background: linear-gradient(to right, rgba(71,71,71,1) 0%, rgba(50,52,54,1) 23%, rgba(4,11,17,1) 73%, rgba(4,11,17,1) 100%);
+   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#474747', endColorstr='#040b11', GradientType=1 );    
+   color: #cdcdcd;
+   font-family: "Avenir Next", "Avenir", sans-serif;
+ }
+ 
+ #menuToggle
+ {
+   display: block;
+   position: relative;
+   top: 50px;
+   left: 50px;
+   
+   z-index: 1;
+   
+   -webkit-user-select: none;
+   user-select: none;
+ }
+ 
+ #menuToggle a
+ {
+   text-decoration: none;
+   color: #232323;
+   
+   transition: color 0.3s ease;
+ }
+ 
+ #menuToggle a:hover
+ {
+   color: tomato;
+ }
+ 
+ 
+ #menuToggle input
+ {
+   display: block;
+   width: 40px;
+   height: 32px;
+   position: absolute;
+   top: -7px;
+   left: -5px;
+   
+   cursor: pointer;
+   
+   opacity: 0;
+   z-index: 2;
+   
+   -webkit-touch-callout: none;
+ }
+
+ #menuToggle span
+ {
+   display: block;
+   width: 33px;
+   height: 4px;
+   margin-bottom: 5px;
+   position: relative;
+   
+   background: #cdcdcd;
+   border-radius: 3px;
+   
+   z-index: 1;
+   
+   transform-origin: 4px 0px;
+   
+   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+               background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+               opacity 0.55s ease;
+ }
+ 
+ #menuToggle span:first-child
+ {
+   transform-origin: 0% 0%;
+ }
+ 
+ #menuToggle span:nth-last-child(2)
+ {
+   transform-origin: 0% 100%;
+ }
+ 
+ #menuToggle input:checked ~ span
+ {
+   opacity: 1;
+   transform: rotate(45deg) translate(-2px, -1px);
+   background: #232323;
+ }
+ 
+ #menuToggle input:checked ~ span:nth-last-child(3)
+ {
+   opacity: 0;
+   transform: rotate(0deg) scale(0.2, 0.2);
+ }
+ 
+ #menuToggle input:checked ~ span:nth-last-child(2)
+ {
+   transform: rotate(-45deg) translate(0, -1px);
+ }
+ 
+ #menu
+ {
+   position: absolute;
+   width: 300px;
+   margin: -100px 0 0 -50px;
+   padding: 50px;
+   padding-top: 125px;
+   
+   background: #ededed;
+   list-style-type: none;
+   -webkit-font-smoothing: antialiased;
+   
+   transform-origin: 0% 0%;
+   transform: translate(-100%, 0);
+   
+   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+ }
+ 
+ #menu li
+ {
+   padding: 10px 0;
+   font-size: 22px;
+ }
+
+ #menuToggle input:checked ~ ul
+ {
+   transform: none;
+ }
